--- a/pastelka/scss/_checkout.scss
+++ b/pastelka/scss/_checkout.scss
@@ -89,10 +89,10 @@
 .checkoutProductPrice{
   width: 15%;
   vertical-align: bottom;
-  margin-bottom: em(54px, 16px);
+  margin-bottom: em(52px, 16px);
 
-  @media (max-width: 1200px) {
-    margin-bottom: em(44px, 16px);
+  @media (min-width: 992px) {
+    margin-bottom: em(48px, 16px);
   }
   @media (max-width: 768px) {
     width: 32%;
@@ -103,7 +103,7 @@
 
 .checkoutProductBasket{
   width: 8%;
-  padding-top: em(40px, 16px);
+  padding-top: em(46px, 16px);
   text-align: right;
   @media (max-width: 768px) {
     width: 32%;
@@ -167,27 +167,6 @@
   margin: em(7px, 30px) 0 em(10px, 30px);
 }
 
-.checkoutProductBottom{
-  .productAdvantages{
-    width: 60%;
-    margin-right: 1%;
-    display: inline-block;
-    vertical-align: top;
-    @media (min-width: 1200px) {
-      width: 62%;
-    }
-    @media (max-width: 992px) {
-      width: 100%;
-      margin-bottom: em(20px, 16px);
-    }
-  }
-  .productAdvantagesIcon{
-    [class^="icon-"]{
-      font-size: em(42px, 16px);
-    }
-  }
-}
-
 .checkoutProductTotal{
   width: 31%;
   display: inline-block;
@@ -203,9 +182,15 @@
 
 .checkoutProductTotal{
   font-size: em(24px, 16px);
-
   @media (max-width: 992px) {
     font-size: em(18px, 16px);
+    margin-left: 0;
+  }
+  @media (min-width: 992px) {
+    margin-left: 61.5%;
+  }
+  @media (min-width: 1200px) {
+    margin-left: 63%;
   }
 }
 
