--- a/pastelka/scss/_productCard.scss
+++ b/pastelka/scss/_productCard.scss
@@ -35,10 +35,6 @@
   &:first-child{
     margin-left: 0;
   }
-  @media (max-width: 768px) {
-    margin: 0 0 em(10px, 16px) 0;
-    width: 100%;
-  }
 }
 
 .productAdvantagesLink{
@@ -48,7 +44,7 @@
       color: $purple1;
     }
     @media (max-width: 768px) {
-      font-size: em(30px, 60px);
+      font-size: em(40px, 60px);
     }
   }
   .productAdvantagesText{
@@ -56,6 +52,7 @@
     font-size: em(12px, 16px);
     @media (max-width: 768px) {
       font-size: em(16px, 16px);
+      display: none;
     }
   }
 
@@ -63,11 +60,6 @@
     .productAdvantagesIcon {
       [class^="icon-"] {
         opacity: .7;
-      }
-    }
-    .productAdvantagesText {
-      @media (max-width: 768px) {
-        text-decoration: underline;
       }
     }
   }
