--- a/pastelka/scss/_header.scss
+++ b/pastelka/scss/_header.scss
@@ -512,6 +512,7 @@
     margin: 0 em(5px, 16px);
     color: $primeColor;
     line-height: em(22px, 18px);
+    font-family: $RobotoBold;
     @media (min-width: 1200px) {
       margin: 0 em(18px, 16px);
     }
