Added some fix.

--- a/pastelka/scss/_global.scss
+++ b/pastelka/scss/_global.scss
@@ -51,7 +51,7 @@ img{
   .titleDecor{
     display: inline-block;
     position: relative;
-    font-family: $RobotoThin;
+    font-family: $RobotoMedium;
     font-size: em(36px, 16px);
     padding: 0 em(26px, 36px) em(5px, 36px);
 
