--- a/pastelka/scss/_header.scss
+++ b/pastelka/scss/_header.scss
@@ -156,6 +156,7 @@
 
 .enterToSite{
   text-align: right;
+  margin-right: 20px;
   [class^="icon-"]{
     font-size: em(25px, 16px);
     line-height: em(30px, 16px);
