--- a/pastelka/css/main.css
+++ b/pastelka/css/main.css
@@ -1720,7 +1720,7 @@ img {
 .wrapTitleDecor .titleDecor {
   display: inline-block;
   position: relative;
-  font-family: Roboto-thin, sans-serif;
+  font-family: Roboto-medium, sans-serif;
   font-size: 2.25em;
   padding: 0 0.72222em 0.13889em;
 }
@@ -2828,6 +2828,7 @@ All this is done for any sub-level being entered.
 
 .enterToSite {
   text-align: right;
+  margin-right: 20px;
 }
 .enterToSite [class^="icon-"] {
   font-size: 1.5625em;
