Added 'section' page.

--- a/pastelka/scss/main.scss
+++ b/pastelka/scss/main.scss
@@ -10,6 +10,7 @@
 @import "breadcrumbs";
 @import "pagination";
 @import "modal";
+@import "verticalSlider";
 @import "header";
 @import "bannersAndSlider";
 @import "specialOffers";
@@ -34,5 +35,6 @@
 @import "personalArea";
 @import "orderStatus";
 @import "price";
+@import "section";
 
 @import "footer";
