--- a/pastelka/scss/_productCard.scss
+++ b/pastelka/scss/_productCard.scss
@@ -21,10 +21,11 @@
   margin-bottom: em(15px, 16px);
 }
 
-.productAdvantagesList{
-
+.productAdvantagesList {
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
-
 .productAdvantagesItem {
   width: 16%;
   display: inline-block;
@@ -147,6 +148,9 @@
     .productCardCell4{
       width: 50%;
       text-align: center;
+    }
+    .productCardCell4{
+      text-align: right;
     }
   }
 }
