--- a/pastelka/scss/_header.scss
+++ b/pastelka/scss/_header.scss
@@ -261,6 +261,7 @@
   [class^="icon-"] {
     font-size: em(40px, 16px);
     color: $pink3;
+    cursor: pointer;
   }
   margin-bottom: em(20px, 16px);
 }
