--- a/pastelka/scss/_modal.scss
+++ b/pastelka/scss/_modal.scss
@@ -233,3 +233,44 @@
     font-size: em(14px, 16px);
   }
 }
+
+//Modal notify
+
+.modalNoticeArrival{
+  label{
+    font-size: em(18px, 16px);
+    text-align: left!important;
+    @media (max-width: 768px){
+      font-size: em(14px, 16px);
+    }
+  }
+  
+  [for="inputNoticeNumber"] + .col-sm-2{
+    padding-left: 0!important;
+  }
+  
+  .modalBodyText{
+    font-size: em(18px, 16px);
+    color: $gray1;
+    margin-bottom: em(10px, 18px);
+  }
+
+  .modalBodyProductTitle{
+    color: $purple1;
+    line-height: 1.2em;
+    font-size: em(18px, 16px);
+    margin-bottom: em(15px, 18px);
+  }
+
+  textarea{
+    resize: vertical;
+  }
+
+  .captchaText{
+    color: $gray3;
+  }
+
+  .modalForm{
+    margin-bottom: em(15px, 16px);
+  }
+}
