--- a/pastelka/scss/_modal.scss
+++ b/pastelka/scss/_modal.scss
@@ -236,7 +236,8 @@
 
 //Modal notify
 
-.modalNoticeArrival{
+.modalNoticeArrival,
+.modalFeedBack{
   label{
     font-size: em(18px, 16px);
     text-align: left!important;
