--- a/pastelka/scss/_delivery.scss
+++ b/pastelka/scss/_delivery.scss
@@ -31,6 +31,11 @@
   line-height: em(32px, 24px);
 }
 
-.deliveryTitle{
-  font-size: em(36px, 16px);
+.deliveryAttention,
+.deliveryAttentionBack{
+  .deliveryTitle{
+    text-align: left;
+    color: $primeColor;
+    font-size: em(30px, 16px);
+  }
 }
