--- a/pastelka/css/main.css
+++ b/pastelka/css/main.css
@@ -1777,8 +1777,8 @@ img {
 }
 @media (max-width: 768px) {
   .wrapScroll {
-    top: 75%;
-    right: 15px;
+    top: 83%;
+    right: 17px;
   }
 }
 
@@ -1790,6 +1790,19 @@ img {
 .scroll:hover {
   color: #7c963c;
 }
+@media (max-width: 768px) {
+  .scroll {
+    background: rgba(187, 222, 95, 0.7);
+    margin-bottom: 5px;
+    padding: 0 2px;
+    border: 1px solid #b6258f;
+    font-size: 1.875em;
+    color: #b6258f;
+  }
+  .scroll:hover {
+    color: #8c1c6e;
+  }
+}
 
 .circle {
   width: 32px;
@@ -1797,6 +1810,11 @@ img {
   background: #99b84d;
   display: inline-block;
   border-radius: 50%;
+}
+@media (max-width: 768px) {
+  .circle {
+    display: none;
+  }
 }
 
 /*------------------ Bread crumbs ------------------*/
@@ -3718,7 +3736,7 @@ All this is done for any sub-level being entered.
   box-sizing: border-box;
   background: #ffffff;
   position: absolute;
-  z-index: 10;
+  z-index: 100;
 }
 
 .headerCategorySubListLeft {
