Added send mail.

--- a/power/style.css
+++ b/power/style.css
@@ -273,6 +273,7 @@ table {
     background: url("img/footerBg.jpg") no-repeat;
     overflow: hidden;
     padding-top: 10px;
+    padding-bottom: 25px;
 }
 
 input,
